# chessxtra-game

./: .gitignore  Array.go  Array.py  Array.pyx  Array_opt.py  Cargo.toml  Game.go  Game.py  Game.pyx  PIECE_CODE_DICT.json  custom_types.go  custom_types.pxd  custom_types.py  custom_types2.pyx  custom_types3.pxd  package.json  play_random_game.py  pnpm-lock.yaml  pyproject.toml  setup.py  tsconfig.json
pieces/: BishopBehaviour.py  BishopBehaviour.pyx  KingBehaviour.py  KingBehaviour.pyx  KnightBehaviour.py  KnightBehaviour.pyx  PawnBehaviour.py  PawnBehaviour.pyx  Piece.py  Piece.pyx  QueenBehaviour.py  QueenBehaviour.pyx  RookBehaviour.py  RookBehaviour.pyx
src/: Array.rs  Array.ts  Game.rs  Game.ts  array.rs  custom_types.ts  game.rs  lib.rs  main.rs  play_random_game.ts  types.rs
src/pieces/: BishopBehaviour.rs  BishopBehaviour.ts  KingBehaviour.rs  KingBehaviour.ts  KnightBehaviour.rs  KnightBehaviour.ts  PawnBehaviour.rs  PawnBehaviour.ts  Piece.ts  QueenBehaviour.rs  QueenBehaviour.ts  RookBehaviour.rs  RookBehaviour.ts  mod.rs  piece.rs
tests/: test_pieces.py
tests/data/: board_states_legal_moves.json
