[package]
name = "chessxtra-game"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"

[dependencies]
indicatif = "0.17.1"
phf = { version = "0.11.1", features = ["macros"] }
getrandom = { version = "^0.2", features = ["js"] }
rand = "0.8.5"
