[package]
name = "chessxtra-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chessxtra_game"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
indicatif = "0.17.1"
phf = { version = "0.11.1", features = ["macros"] }
getrandom = { version = "^0.2", features = ["js"] }
rand = "0.8.5"
