[tool.poetry]
name = "mini-chess"
version = "0.1.0"
description = ""
authors = ["Sam Purkis <sam.purkis@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "mini_chess"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
