[tool.poetry]
name = "chessxtra-game"
version = "0.1.0"
description = ""
authors = ["Sam Purkis <Sam.Purkis@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
types-tqdm = "^4.64.7"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pythran = "^0.12.0"
mypy = "^0.982"
Cython = "3.0a11"
line-profiler = "^3.5.1"
project-graph = {git = "https://github.com/fior-di-latte/project_graph.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
